--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
 /******************************/
 
 .header {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   display: flex;
   justify-content: space-between;
   padding: 2.4rem 4.8rem;
@@ -30,8 +30,8 @@
 
 .nav-link:hover,
 .nav-link:active {
-  background-color: #dee2e6;
-  /* color: #fff; */
+  /* background-color: #dee2e6; */
+  color: #2b8a3e;
 }
 
 /******************************/
@@ -40,7 +40,7 @@
 
 .section-hero {
   background-color: #ebfbee;
-  padding: 4.8rem;
+  padding: 1.2rem 2.4rem;
 }
 
 .hero-container {
@@ -51,14 +51,19 @@
   padding: 2.4rem;
 }
 
+.hero-text {
+  align-self: center;
+}
+
 .hero-title {
-  font-size: 9.3rem;
+  font-size: 7.4rem;
+  letter-spacing: 0.05rem;
   font-weight: 700;
   color: #212529;
 }
 
 .hero-description {
-  font-size: 3.8rem;
+  font-size: 2.4rem;
   margin-top: 2.4rem;
   line-height: 1.3;
   color: #343a40;
@@ -76,7 +81,7 @@
 .hero-link:link,
 .hero-link:visited {
   display: inline-block;
-  font-size: 3rem;
+  font-size: 2.4rem;
   margin-top: 9.6rem;
   padding: 1.2rem 2.4rem;
   color: #fff;
@@ -88,4 +93,21 @@
 .hero-link:hover,
 .hero-link:active {
   background-color: #2b8a3e;
+}
+
+.hero-link--contact:link,
+.hero-link--contact:visited {
+  display: inline-block;
+  font-size: 2.4rem;
+  padding: 1.2rem 2.4rem;
+  margin-left: 4rem;
+  color: #2f9e44;
+  border-radius: 4px;
+  transition: all 0.3s;
+}
+
+.hero-link--contact:hover,
+.hero-link--contact:active {
+  box-shadow: inset 0 0 0 3px #2b8a3e;
+  color: #2b8a3e;
 }
